[package]
name = "gles31-sys"
version = "0.2.0"
authors = ["Brent Gardner <bgardner@squarelabs.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust bindings for OpenGL ES 3.1"
homepage = "https://github.com/Mersive-Technologies/gles31-sys"
repository = "https://github.com/Mersive-Technologies/gles31-sys"
readme = "readme.md"
keywords = ["OpenGL", "ES", "gles", "3d", "Android", "iOS"]

[lib]
name = "gles31_sys"
crate-type = ["rlib", "staticlib"]

[dependencies]

[build-dependencies]
bindgen = "0.56.0"
